@@ -2,19 +2,19 @@ AUX apgdiff-1.0.0_beta12-build.xml 4096 RMD160 78ca615ba7cfb07d260ca1e84ad73f2ba
 MD5 7ec4d3b260c25d212a6558022815c64d files/apgdiff-1.0.0_beta12-build.xml 4096
 RMD160 78ca615ba7cfb07d260ca1e84ad73f2baf346510 files/apgdiff-1.0.0_beta12-build.xml 4096
 SHA256 b66aae06206766c61062d9887abcfe811cbb6b87b5bcb8c0ce869beb0a904173 files/apgdiff-1.0.0_beta12-build.xml 4096
-DIST apgdiff-1.0.0_beta12-src.zip 103025 RMD160 94f202039b772f0cc97f3108a5e555a0522d57b0 SHA1 4f4909bcc89070621dc434a7edc72352e3e0c557 SHA256 52375693866ff1960fc188fa411b84e232322387a0b0b9dc363e781c7ffcd6d3
-EBUILD apgdiff-1.0.0_beta12.ebuild 1066 RMD160 495241bd39bdbe400efcf8e42e6a061650767075 SHA1 135b4721eae509c2f2a796a67082f7533c81b87d SHA256 64332351ab301dba2bf60a64c3f87d18e8f9367dbde0bc285b5762440480604e
-MD5 f2f707b6bfefcd2b8d7ab86dece0a2df apgdiff-1.0.0_beta12.ebuild 1066
-RMD160 495241bd39bdbe400efcf8e42e6a061650767075 apgdiff-1.0.0_beta12.ebuild 1066
-SHA256 64332351ab301dba2bf60a64c3f87d18e8f9367dbde0bc285b5762440480604e apgdiff-1.0.0_beta12.ebuild 1066
-MISC ChangeLog 332 RMD160 1f2c9967c11a8b24895f1374d61bf95ebfc7e7d3 SHA1 3fa7e3aaf9a691745e6f00c1497debab3f4b9613 SHA256 76346fff556c900a72227319333e2fa30770363cc14f7200508ae21cad7a37c9
-MD5 d4b9b636daa5194266f141cfd6d03b35 ChangeLog 332
-RMD160 1f2c9967c11a8b24895f1374d61bf95ebfc7e7d3 ChangeLog 332
-SHA256 76346fff556c900a72227319333e2fa30770363cc14f7200508ae21cad7a37c9 ChangeLog 332
+DIST apgdiff-1.0.0_beta13-src.zip 215000 RMD160 7d80110ccfd95aad634fdce33594e97a466fd820 SHA1 253961ed07d56a59e534bf55a6b28a6ba07c62ae SHA256 1d1a55ee725a008af70bd1330e219da748e715cca6004317d3d53c1f437c5666
+EBUILD apgdiff-1.0.0_beta13.ebuild 1010 RMD160 b14e71ab745f957b903391b874e9cc82e14780ad SHA1 f8bf96ef6e24d502a753d9839096c1afb0b2c311 SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759
+MD5 3b24968be9537ed36500c18870980646 apgdiff-1.0.0_beta13.ebuild 1010
+RMD160 b14e71ab745f957b903391b874e9cc82e14780ad apgdiff-1.0.0_beta13.ebuild 1010
+SHA256 e5b51c41e5de5aef2fcb9d35ce0caf1189fd71a1bf93cc3505ceaddb0d603759 apgdiff-1.0.0_beta13.ebuild 1010
+MISC ChangeLog 468 RMD160 b3678e89eb4453be9832241d89bdb372f3067b0f SHA1 8344eeec7d1b892168b78706eca188ea8b7821a8 SHA256 bc888934b21ade5aebded90ac81eff80f339e6f00c30f4689dbf98f90f3f1dc4
+MD5 2c3983a356e0809c24fe13d1cf3952df ChangeLog 468
+RMD160 b3678e89eb4453be9832241d89bdb372f3067b0f ChangeLog 468
+SHA256 bc888934b21ade5aebded90ac81eff80f339e6f00c30f4689dbf98f90f3f1dc4 ChangeLog 468
 MISC metadata.xml 217 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 SHA1 9661e29f710f8b88d1ebad0d7cfa2716ae869b51 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2
 MD5 a28ef1dbcd9ec5d985e36f5b538891b5 metadata.xml 217
 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 metadata.xml 217
 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2 metadata.xml 217
-MD5 21f777ab6e49ce800c1613a08571d6fa files/digest-apgdiff-1.0.0_beta12 265
-RMD160 e06e05bbef17f5f5815e39793b957855c9c7711b files/digest-apgdiff-1.0.0_beta12 265
-SHA256 3350c713b9c79f5df25f24fba109de5fb567f628758cc0ebdc781973ed4a4a55 files/digest-apgdiff-1.0.0_beta12 265
+MD5 c374ffcb98d78b75626a0ae601559b72 files/digest-apgdiff-1.0.0_beta13 265
+RMD160 d8f6a54d6e0f7fe212cf63dcc79637b1aeeb85cd files/digest-apgdiff-1.0.0_beta13 265
+SHA256 c0f5aee06cf52d00bd16f68469b640e5ef0ecb08c71bcaca4cc8f93a64b8a361 files/digest-apgdiff-1.0.0_beta13 265
