@@ -1,3 +1,0 @@
-MD5 86d3634ccf0c71b96802fe0976ebcda0 apgdiff-1.0.0_beta12-src.zip 103025
-RMD160 94f202039b772f0cc97f3108a5e555a0522d57b0 apgdiff-1.0.0_beta12-src.zip 103025
-SHA256 52375693866ff1960fc188fa411b84e232322387a0b0b9dc363e781c7ffcd6d3 apgdiff-1.0.0_beta12-src.zip 103025
