@@ -1,0 +1,3 @@
+MD5 d5499816ed12a387995e7f1a4de29f78 apgdiff-1.0.0_beta13-src.zip 215000
+RMD160 7d80110ccfd95aad634fdce33594e97a466fd820 apgdiff-1.0.0_beta13-src.zip 215000
+SHA256 1d1a55ee725a008af70bd1330e219da748e715cca6004317d3d53c1f437c5666 apgdiff-1.0.0_beta13-src.zip 215000
